# raytracinginonesemester

./: .gitignore  README.md
HW0/: Assignment_0_Vikrant.pptx  HW0.md  HW0_Zechariah_Yurkanin.pptx  hw0_augustine_aaron.pptx  hw0_omkar_vengurlekar.pptx  hw0_xuechao_zhang.pptx
HW1/: CMakeLists.txt  README.md
HW1/include/: antialias.h  camera.h  raytracer.h
HW1/ppm_p6_lib/: README.md
HW1/ppm_p6_lib/include/: ppm_p6.hpp
HW1/ppm_p6_lib/src/: ppm_p6.cpp
HW1/src/: main.cpp  render.cpp
HW1/test_ray_tri_inter_STANDALONE/: README.md  vec3.h
HW1/tests/: test_camera.cpp
HW2/: CMakeLists.txt  README.md
HW2/HW2/CPUOnly/: CMakeLists.txt  README.md
HW2/HW2/CPUOnly/config/: cuboid.json  frog.json  mirror.json  sphere.json  sphere_area.json  sphere_area_fast.json  sphere_point.json  test.json
HW2/HW2/CPUOnly/include/: MeshOBJ.h  brdf.h  camera.h  material.h  ray.h  raytracer.h  scene_loader.h  transform.h  vec3.h  visualization.h
HW2/HW2/CPUOnly/ppm_p6_lib/: CMakeLists.txt
HW2/HW2/CPUOnly/ppm_p6_lib/examples/: ppm_p6_test.cpp
HW2/HW2/CPUOnly/src/: MeshOBJ.cpp  render.cpp  scene_loader.cpp  stage_preview.cpp
HW2/HW2/CPUOnly/test_ray_tri_inter_STANDALONE/: CMakeLists.txt  ray.h  test_ray_triangle_inter.cpp
HW2/HW2/CPUOnly/tests/: test_camera.cpp
HW2/HW2/GPUandCPU/: .gitignore  CMakeLists.txt  visualize_bvh.py
HW2/HW2/GPUandCPU/assets/json_files/: frog.json  mixed_objects.json  sphere.json  sphere_single.json
HW2/HW2/GPUandCPU/assets/meshes/: sphere.mtl
HW2/HW2/GPUandCPU/include/: antialias.h  brdf.h  camera.h  imports.h  query.cu  query.h  scene.h  visualizer.h
HW2/HW2/GPUandCPU/src/: main.cu
HW2/assets/json_files/: frog.json  mixed_objects.json  sphere.json  sphere_single.json
HW2/include/: MeshOBJ.h  antialias.h  brdf.h  buffers.h  bvh.cu  bvh.h  camera.h  imports.h  material.h  query.cu  query.h  ray.h  scene.h  shader.h  vec3.h  warmup.h
HW2/src/: MeshOBJ.h  buffers.h  bvh.cu  bvh.h  bvh_viz_cpu  imports.h  main.cu  vec3.h  warmup.cu  warmup.h
